@startuml
class universe{
    Name      name
    Text      description
}

class title{
    Date        date
    Text      Title
    Time        lenght
    Text[]    awards
    Category[] categories
}

class people{
    Name      name
    Date        birth_year
    Date        death_year
}

class watchlist{
}

class user{
    Name      pseudo
    Date        inscription_date
}

class review{
    Int         rating
    Date        creation
    Text      body
}

universe "0..1" -- "2..*" title
title "0..*" -- "1..*" people
title "0..*" -- "1" review
review "0..*" -- "1" user
user "1" -- "1" watchlist
watchlist "0..*" -- "0..*" title

(title, people) .. Role

class Role{
    Jobs[]    job
    Name      character
}

@enduml
